--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Impostazioni di base */
+/* Reset e impostazioni di base */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,13 +10,36 @@ body, html {
   font-family: 'Arial', sans-serif;
 }
 
-/* Wrapper per layout a due colonne */
-.wrapper {
-  display: flex;
-  min-height: 100vh;
+/* Header a tutta larghezza */
+.page-header {
+  background-color: #222;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
 }
 
-/* Sidebar verticale */
+.page-header h1 {
+  font-size: 2.5em;
+  margin-bottom: 5px;
+}
+
+.page-header h3 {
+  font-size: 1.5em;
+  margin-bottom: 5px;
+  font-weight: normal;
+}
+
+.page-header p {
+  font-size: 1em;
+}
+
+/* Wrapper per il layout a due colonne */
+.wrapper {
+  display: flex;
+  min-height: calc(100vh - 80px); /* Altezza totale meno l'header */
+}
+
+/* Sidebar (fascia verticale a sinistra) */
 .sidebar {
   width: 300px;
   background-color: #2b2b2b;
@@ -55,38 +78,15 @@ body, html {
   text-decoration: underline;
 }
 
-/* Contenuto principale */
+/* Contenuto principale a destra */
 .main-content {
   flex: 1;
   background-color: #fff;
   padding: 40px 60px;
+  overflow-y: auto;
 }
 
-.main-header {
-  text-align: center;
-  margin-bottom: 40px;
-}
-
-.main-header h1 {
-  font-size: 2.5em;
-  margin-bottom: 10px;
-}
-
-.main-header h3 {
-  font-size: 1.5em;
-  margin-bottom: 10px;
-  font-weight: normal;
-}
-
-.main-header p {
-  color: #777;
-}
-
-/* Sezioni principali */
-.main-content section {
-  margin-bottom: 40px;
-}
-
+/* Sezioni del contenuto principale */
 .main-content h2 {
   font-size: 1.8em;
   margin-bottom: 15px;
@@ -94,7 +94,6 @@ body, html {
   padding-bottom: 5px;
 }
 
-/* Esperienza */
 .experience-item {
   margin-bottom: 25px;
   padding-bottom: 15px;
