--- a/style.css
+++ b/style.css
@@ -58,9 +58,10 @@ body, html {
   padding: 20px;
 }
 
-.sidebar-inner {
-  display: flex;
-  flex-direction: column;
+.sidebar,
+.sidebar-inner,
+.sidebar section {
+  background-color: #2b2b2b;
 }
 
 .sidebar h2 {
