--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body, html {
 .sidebar,
 .sidebar-inner,
 .sidebar section {
-  background-color: #2b2b2b;
+  background-color: #000;
 }
 
 .sidebar h2 {
