--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body, html {
 /* Sidebar (fascia verticale a sinistra) */
 .sidebar {
   width: 300px;
-  background-color: #2b2b2b;
+  background-color: #000;
   color: #fff;
   padding: 20px;
 }
