--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body, html {
   width: 300px;
   background-color: #000;
   color: #fff;
-  padding: 70px;
+  padding: 75px;
 }
 
 .sidebar-inner {
@@ -133,14 +133,15 @@ body, html {
   line-height: 1.6;
 }
 
-/* Footer: sfondo grigio, testo bianco, altezza aumentata di 2cm tramite padding */
+/* Footer: sfondo grigio, testo bianco, altezza aumentata di 2cm tramite padding,
+   e unito visivamente con il sidebar (nessun margine-top) */
 .footer {
   background-color: #808080;
   color: #fff;
   text-align: center;
   padding: 20px;
   font-size: 0.9em;
-  margin-top: 20px;
+  margin-top: 0;
 }
 
 /* Responsive: layout a colonna per schermi piccoli */
